# design-patterns-sv

./: .gitignore  README.org
creational-patter/abstract-factory/: Makefile  abstract-factory-example.sv
creational-patter/builder/: CMakeLists.txt  Makefile  builder-example.sv
creational-patter/factory-method/: CMakeLists.txt  Makefile  factory-example-main.cpp  factory-method-example.sv
creational-patter/prototype/: Makefile  prototype-example.sv
creational-patter/singleton/: Makefile  singleton-example.sv
structural-patterns/adapter-pattern/: Makefile  adapter-example.sv
structural-patterns/bridge-pattern/: Makefile  bridge-example.sv
structural-patterns/composite-pattern/: Makefile  composite-example.sv
structural-patterns/decorator-pattern/: Makefile  decorator-example.sv
structural-patterns/facade-pattern/: Makefile  facade-example.sv
structural-patterns/flyweight-pattern/: Makefile  flyweight-example.sv
